--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ a {
     grid-template-columns: 33% 33% 33%;
     grid-template-areas: 
     'head head head'
-    'res res res'
+    'nav nav nav'
     'begin inter adv'
     'foot foot foot';
 }
@@ -24,10 +24,18 @@ a {
 header {
     grid-area: head;
 }
-
 header > h1 {
     text-align: center;
     font-size: 2.5vw;
+}
+
+nav {
+    border: 1px solid black;
+    grid-area: nav;
+    text-align: center;
+    padding: 1vw;
+    margin: 1vw;
+    font-size: 1vw;
 }
 
 .beginner {
@@ -45,7 +53,6 @@ header > h1 {
     padding: 1vw;
     border: 1px solid black;
 }
-
 .beginner > h2, .intermediate > h2, .advanced > h2 {
     font-size: 1.7vw;
     text-align: center;
