--- a/lessons/lesson.css
+++ b/lessons/lesson.css
@@ -20,18 +20,20 @@ a {
 
 header {
     grid-area: head;
+}
+header > h1 {
     text-align: center;
+    font-size: 3vw;
 }
 
 nav {
     grid-area: nav;
-
-    border: 1px solid black;
     text-align: center;
-    font-size: 1vw;
-
-    padding: 1vw;
     margin: 1vw;
+    font-size: 1.2vw;
+}
+nav a{
+    text-decoration: none;
 }
 
 main {
@@ -43,8 +45,34 @@ main {
 }
 
 footer {
-    grid-area: foot;
-
     font-size: 1vw;
+    grid-area: foot;
     text-align: center;
+}
+footer a {
+    border: 1px solid #6ab43d;
+    background-color: #6ab43d;
+
+    border-radius: 5px;
+    
+    color: #72007a;
+    text-decoration: none;
+
+    padding: .2vw;
+    margin: .2vw;
+}
+footer a strong{
+    background-color: #72007a;
+    color: #6ab43d;
+    padding: .1vw;
+    border: 1px solid #72007a;
+    border-radius: 5px;
+}
+footer a:hover {
+    background-color: #72007a;
+    color: #6ab43d;
+}
+footer a:hover strong{
+    background-color: #6ab43d;
+    color:#72007a;
 }
