--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ header {
 }
 header > h1 {
     text-align: center;
-    font-size: 2.5vw;
+    font-size: 3vw;
 }
 /*
 header > img {
@@ -74,12 +74,12 @@ nav a{
 }
 
 .beginner, .intermediate, .advanced {
-    margin: 1vw;
-    padding: 1vw;
+    margin: .8vw;
+    padding: .8vw;
     border: 1px solid black;
 }
 .beginner > h2, .intermediate > h2, .advanced > h2 {
-    font-size: 1.7vw;
+    font-size: 2.2vw;
     text-align: center;
 }
 
