--- a/programs.css
+++ b/programs.css
@@ -12,6 +12,7 @@ a {
     display: grid;
     grid-template-areas: 
     'imega head imega2'
+    'nav nav nav'
     'links links links'
     'back back back'
     'foot foot foot';
@@ -27,6 +28,11 @@ header {
 }
 header > h1 {
     font-size: 3vw;
+}
+
+nav {
+    grid-area: nav;
+    text-align: center;
 }
 
 .imega2 {
